fixed diagonal transition and col spacing

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@
     display:flex;
     align-items:center;
     justify-content:center;
+    padding: 0 !important;
 }
 
 .col span{
@@ -17,6 +18,7 @@
 
 .board .row{
     height:100px;
+    margin: 0;
     color:black;
     border-bottom:solid;
 }
@@ -73,6 +75,7 @@ body{
 
 .col-line{
     background-color:green;
+    transform-origin: top left;
     height:0%;
     width:5px;
     border-radius: 8px;
